Fixed z-index bug

--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -973,7 +973,7 @@ ul#main-accordion .panel-heading .nav-icon {
           border-color: rgba(0, 0, 0, 0.15);
           background-color: #ffffff;
           border-bottom: none;
-          z-index: 1001;
+          z-index: 1002;
           &:after {
             display: block;
             background-color: #ffffff;
@@ -992,6 +992,7 @@ ul#main-accordion .panel-heading .nav-icon {
           height: auto;
           border-top: solid 1px rgba(0, 0, 0, 0.15);
           margin-bottom: 25px;
+          z-index: 1001;
           ul li {
             list-style-type: none;
           }
